6374: List of dirty leaves doesn't have to be sorted on VirtualNodeCache flush
Signed-off-by: Artem Ananev <artem.ananev@swirldslabs.com>