@@ -33,7 +33,6 @@ import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.DisplayName;
@@ -173,7 +172,7 @@ class ConcurrentArrayTest {
         b.merge(a);
         assertEquals(14, b.size(), "Wrong value");
 
-        final List<String> elements = b.sortedStream(null).collect(Collectors.toList());
+        final List<String> elements = b.stream(null).toList();
 
         assertEquals("Element 1", elements.get(0), "Wrong value");
         assertEquals("Element 2", elements.get(1), "Wrong value");
@@ -242,7 +241,7 @@ class ConcurrentArrayTest {
         // Merge a and b together and validate the result
         b.merge(a);
         assertEquals(8, b.size(), "Wrong value");
-        List<String> elements = b.sortedStream(null).collect(Collectors.toList());
+        List<String> elements = b.stream(null).toList();
 
         assertEquals(8, elements.size(), "Wrong value");
         assertEquals("Element 1", elements.get(0), "Wrong value");
@@ -257,7 +256,7 @@ class ConcurrentArrayTest {
         // Merge a and c and validate the result.
         c.merge(a);
         assertEquals(9, c.size(), "Wrong value");
-        elements = c.sortedStream(null).collect(Collectors.toList());
+        elements = c.stream(null).toList();
 
         assertEquals(9, elements.size(), "Wrong value");
         assertEquals("Element 1", elements.get(0), "Wrong value");
@@ -318,7 +317,7 @@ class ConcurrentArrayTest {
         a.merge(c);
         assertEquals(6, a.size(), "Wrong size");
 
-        List<String> elements = a.sortedStream(null).toList();
+        List<String> elements = a.stream(null).toList();
 
         assertEquals(a.size(), elements.size(), "Wrong value");
         assertEquals("Element 1", elements.get(0), "Wrong value");
@@ -435,7 +434,7 @@ class ConcurrentArrayTest {
 
         // Check that every element is there, and in order.
         final AtomicInteger expected = new AtomicInteger(0);
-        arr.seal().sortedStream(null).forEach(value -> assertEquals(expected.getAndIncrement(), value, "Wrong value"));
+        arr.seal().stream(null).forEach(value -> assertEquals(expected.getAndIncrement(), value, "Wrong value"));
         assertEquals(numElements, expected.get(), "Wrong value");
     }
 
@@ -450,7 +449,7 @@ class ConcurrentArrayTest {
         final ConcurrentArray<String> arr = new ConcurrentArray<>();
         assertThrows(
                 IllegalStateException.class,
-                () -> arr.sortedStream(null),
+                () -> arr.stream(null),
                 "Expected IAE when sorting a mutable array with no elements");
 
         arr.add("Element 5");
@@ -458,7 +457,7 @@ class ConcurrentArrayTest {
         arr.add("Element 8");
         assertThrows(
                 IllegalStateException.class,
-                () -> arr.sortedStream(null),
+                () -> arr.stream(null),
                 "Expected IAE when sorting a mutable array with elements");
     }
 
@@ -472,7 +471,7 @@ class ConcurrentArrayTest {
         final ConcurrentArray<String> arr = new ConcurrentArray<>();
         arr.seal();
 
-        final Stream<String> stream = arr.sortedStream(null);
+        final Stream<String> stream = arr.stream(null);
         assertEquals(0, stream.count(), "Stream count should have been 0");
     }
 
@@ -503,7 +502,7 @@ class ConcurrentArrayTest {
             final int ii = i + 1;
             futures[i] = e.submit(() -> {
                 Comparator<Integer> comparator = Comparator.comparingInt(a -> (a * 997 * ii) % numElements);
-                final List<Integer> elements = arr.sortedStream(comparator).toList();
+                final List<Integer> elements = arr.stream(comparator).toList();
                 assertEquals(numElements, elements.size(), "Wrong value");
                 for (int j = 0; j < numElements - 1; j++) {
                     assertTrue(comparator.compare(elements.get(j), elements.get(j + 1)) <= 0, "Wrong value");
